Rename scripts directory to tools
update package.json after folder rename

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "dev": "RBSEE_PROXY=http://127.0.0.1:8081 RBSEE_URL=$RBSEE_PROXY node src/main.js",
     "prod": "node src/main.js",
-    "mock:up": "node scripts/mock/up.js",
-    "mock:down": "node scripts/mock/down.js",
-    "mock:status": "node scripts/mock/status.js",
+    "mock:up": "node tools/mock/up.js",
+    "mock:down": "node tools/mock/down.js",
+    "mock:status": "node tools/mock/status.js",
     "tree": "tree -I node_modules"
   },
   "devDependencies": {
